sample/gitops/hello-world-express/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-express
  namespace: user07
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: hello-express
  template:
    metadata:
      labels:
        app: hello-express
    spec:
      containers:
      - image: public.ecr.aws/b3v0x0o0/edu-express
        name: hello-express
        ports:
        - containerPort: 3000
