sample/gitops/hello-world-express/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-express-svc
  namespace: user07
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: hello-express
